test/parser/should_succeed/while3.souc
main() = do
    while true do
        print "sub call"
        explode
