test/parser/should_fail/unless2.souc
main() = do
    if true
        unless true do
            print "sub call"
            explode
        end if
